# spectre

./: Cargo.toml  README.md  code.sp  code.spectre
cli/: Cargo.toml
cli/src/: main.rs
common/src/: error.rs
interpreter/: Cargo.toml
interpreter/src/: lib.rs  run.rs  scope.rs  value.rs
interpreter/src/builtins/: io.rs  math.rs  mod.rs
lexer/src/: error.rs  lex.rs  lib.rs  token.rs
parser/src/: error.rs  node.rs  parser.rs
src/: lexer.rs  main.rs  node.rs  parser.rs  position.rs  token.rs
src/ast/: error.rs  mod.rs  node.rs  parser.rs
src/interpreter/: mod.rs  run.rs  scope.rs  value.rs
src/interpreter/builtins/: math.rs
src/lexer/: error.rs  lex.rs  token.rs
vscode/: language-configuration.json  package.json
vscode/snippets/: snippets.code-snippets
vscode/syntaxes/: spectre.tmLanguage.json
