[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spectre"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
interpreter = { path = "../interpreter" }
clap = { version = "4.4.10", features = ["derive", "std"], default-features = false }
ariadne = "0.4.0"
